-- Release 0.0.8 --
	
	
2002-05-05  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: Updated VERSION.
	* src/gerbv.c: If gerbv was started without any files loaded,
	  the watch mouse pointer was running all the time.
	

2002-05-03  Anders Eriksson  <anders@umunet.org>

	* AUTHORS: Corrected my e-mail address

2002-05-02  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Made redraw_pixmap() and image2pixmap()
	interruptible by calling g_main_pending() at regular intervals and
	registering an idle function to redraw the pixmap at a later time
	if there are pending events to process. This partly fixes 550319.
	  Also added the event to the data sent to the zoom function since
	this allows us to read the mouse position at the event generation
	and not at processing time which we used to do (giving a very
	confusing behaviour if we can't keep up with events).

2002-05-02  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c: Now ovals are ovals and not ellypses.
	  Closes bug 548099.
	* HACKING, AUTHORS, CONTRIBUTORS: Updated with more authors
	  and contributors. Also extended HACKING to include ChangeLog
	  and code format.
	* src/gerbv.c: Autoscale is more correct, though not completely
	  perfect. Closes bug 550795.
	
2002-04-29  Anders Eriksson  <anders@faldor.umunet.org>

	* src/gerbv.c: Improved zoom. Now zooming around image center when
	zooming from menu and around mouse pointer when zooming using the
	mouse. There seems to be some (small) rounding error in the
	centering code, but it is very small. Closes 548128.

2002-04-27 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c: Number constants replaced with an enumeration
	  type. Also error in zooming comments fixed.
	* man/gerbv.1.in: Added blurb about zooming.
	* src/gerber.c: Bug 549602 fixed so format statements are
	  completely handled.


2002-04-27 Stefan Petersen (spe@stacken.kth.se)

	* src/gerbv.c: Changed name for all *open* functions to 